SOLR-17525: Add test permissions and fix docs
(cherry picked from commit 2728f7a4077f6aa4118dc81b4beacecc53ea2e18)